--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -21,8 +21,7 @@ Subject matter
     communications of natural persons and the protection of natural persons
     with regard to the processing of personal data, and for protection of communications of legal persons. 
 3. The provisions of this Regulation particularise and complement Regulation (EU)
-    2016/679 with regard to the processing of data that qualify as
-    personal data by laying down specific rules for the purposes mentioned in paragraphs 1
+    2016/679 by laying down specific rules for the purposes mentioned in paragraphs 1
     to 2.
 
 ```
@@ -88,9 +87,6 @@ Territorial scope and representative
 
 (c) the protection of terminal equipment information of end-users who are in the Union.
 
-(ca) the placing on the Union market of software permitting electronic communications,
-    including the retrieval and presentation of information on the internet;
-
 (cb) the offering of publicly available directories of end-users of electronic
     communications services whoe are in the Union;
 
@@ -132,7 +128,7 @@ Definitions
 (b) the definitions of ‘electronic communications network’, ‘electronic communications
     service’, ‘interpersonal communications service’, ‘number-based interpersonal
     communications service’, ‘number-independent interpersonal communications
-    service’, ‘end-user’ and ‘call’ in paragraphs (1), (4), (5), (6), (7), (14) and (21)
+    service’, ‘end-user’ and ‘call’ in paragraphs (1), (4), (5), (6), (7), (14) and (31)
     respectively of Article 2 of [Directive establishing the European Electronic
     Communications Code];
 
@@ -144,8 +140,9 @@ Definitions
 
 2. For the purposes of this Regulation, the definition of ‘interpersonal
     communications service’ referred to in point (b) of paragraph 1 shall include services which enable interpersonal and
-    interactive communication merely as a ancillary feature that is intrinsically
+    interactive communication merely as a minor ancillary feature that is intrinsically
     linked to another service.
+ 
 3. In addition, for the purposes of this Regulation the following definitions shall apply:
 
 (a) ‘electronic communications data’ means electronic communications content and
@@ -247,7 +244,7 @@ Permitted processing of electronic communications data
     attacks in the transmission of electronic communications, for the duration necessary for that purpose.
 
 (c) it is necessary to detect or prevent security risks and/or attacks on end-users’
-    terminal equipment.
+    terminal equipment, for the duration necessary for that purpose;
 
 2. Without prejudice to paragraph 1, providers of electronic communications networks and
     services shall be permitted to process electronic communications metadata only if:
@@ -386,8 +383,7 @@ Protection of end-users' terminal equipment information
 
 (b) the end-user has given his or her consent; or
 
-(c) it is necessary for providing an information society service requested by the end-
-    user; or
+(c) it is necessary for providing a service requested by the end-user; or
 
 (d) it is necessary for audience measuring, provided that such measurement is
     carried out by the provider of the information society service requested by the end-
@@ -475,8 +471,8 @@ Article 12
 Presentation and restriction of calling and connected line identification
 ```
 1. Where presentation of the calling and connected line identification is offered in
-    accordance with Article [107] of the [Directive establishing the European Electronic
-    Communication Code], the providers of number-based
+    accordance with Article [115] of the Directive establishing the European Electronic
+    Communication Code, the providers of number-based
     interpersonal communications services shall provide the following:
 
 (a) the calling end-user with the possibility of preventing the presentation of the calling
@@ -550,7 +546,7 @@ Incoming call blocking
 2. Providers of number-based interpersonal communications services shall
     also provide the called end-user with the following possibilities, free of charge:
 
-(a) to block incoming calls from specific numbers or from anonymous sources or from
+(a) to block, where technically feasible, incoming calls from specific numbers or from anonymous sources or from
     numbers using a specific code or prefix referred to in Article 16(3a); and
 
 (b) to stop automatic call forwarding by a third party to the end-user's terminal
@@ -674,42 +670,43 @@ Independent supervisory authorities
     be responsible for monitoring the application of this Regulation (‘supervisory
     authorities’).
 
-1ab. The supervisory authorities referred to in paragraph 0 shall have the power to 
-    provide remedies pursuant to article 21(1) and to impose administrative fines 
-    pursuant to article 23.
+1ab. The supervisory authorities referred to in paragraph 0 shall have
+    investigative and corrective powers, including the power to impose administrative
+    fines pursuant to article 23.
 
 1b. Where more than one supervisory authority is responsible for monitoring the
     application of this Regulation in a Member State, such authorities shall cooperate
-    with each other.
+    with each other. 
 
-2. The supervisory authorities referred to in paragraph 0 shall cooperate
+2. The supervisory authorities referred to in paragraph 0 shall cooperate with the 
+    supervisory authority responsible for monitoring the application of Regulation (EU) 2016/679 and,
     whenever appropriate with national regulatory authorities established pursuant to the
-    [Directive Establishing the European Electronic Communications Code].
+    Directive Establishing the European Electronic Communications Code and other relevant authorities.
 
 ```
 Article 19
 European Data Protection Board
 ```
 1. The European Data Protection Board, established under Article 68 of Regulation (EU)
-    2016/679, shall have competence to ensure the consistent application of Chapter II of this Regulation.
+    2016/679, shall have competence to e contribute to the consistent application of
+    Chapters I and II of this Regulation.
 
-2. For the purposes of this Regulation, Tthe Board shall also have the following tasks:
+2. The Board shall also have the following tasks:
 
 (a) advise the Commission on any proposed amendment of this Regulation;
 
 (b) examine, on its own initiative, on request of one of its members or on request of the
     Commission, any question covering the application of this Regulation in relation to
-    Chapter II and issue guidelines, recommendations and best practices in order to encourage consistent
+    Chapters I and II and issue guidelines, recommendations and best practices in order to encourage consistent
     application of this Regulation.
 
-(c) draw up guidelines for supervisory authorities referred to in paragraph 1 of Article
-    18 in relation to their powers as laid down in Article 58 of Regulation (EU) 2016/679
-    and setting of administrative fines pursuant to Article 23 of this Regulation;
+(c) draw up guidelines for supervisory authorities referred to in paragraph 0 of Article
+    18 in relation to their powers;
 
-(d) issue guidelines, recommendations and best practices in accordance with point (b) of
-    this paragraph for establishing common procedures for reporting by end-users of
-    infringements of this Regulation regarding rules laid down in paragraph 2 of Article
-    54 of Regulation (EU) 2016/679;
+(d) issue guidelines, recommendations and best practices  in order to facilitate
+    cooperation, including exchange of information, between supervisory authorities
+    referred to in paragraph 0 of Article 18 and/or the supervisory authority responsible
+    for monitoring the application of Regulation (EU) 2016/679
 
 (da) issue guidelines, recommendations and best practices in accordance with point (b) of
     this paragraph to assess for different types of electronic communications services the
@@ -717,19 +714,10 @@ European Data Protection Board
 
 (db) issue guidelines, recommendations and best practices in accordance with point (b) of
     this paragraph on the provision of consent in the context of Article 6 and 8 of this
-    Regulation by end-users wjp are legal persons and in an employment relationship;
+    Regulation by end-users who are legal persons or in an employment relationship;
 
 (e) [provide the Commission with an opinion on the icons referred to in paragraph 3 of
     Article 8];
-
-(f) promote the cooperation and effective bilateral and multilateral exchange of
-    information and best practices between the supervisory authorities referred to in
-    paragraph 0 of Article 18;
-
-(g) promote common training programmes and facilitate personnel exchanges between
-    the supervisory authorities referred to in paragraph 0 of Article 18 and, where
-    appropriate, with the supervisory authorities of third countries or with international
-    organisations;
 
 (h) promote the exchange of knowledge and documentation on legislation on protection
     of electronic communications of end-users and of the integrity of their terminal
@@ -753,16 +741,11 @@ European Data Protection Board
 
 ```
 Article 20
-Cooperation and consistency procedures
+Cross-border cooperation
 ```
-1. Each supervisory authority shall contribute to the consistent application of this Regulation
+Each supervisory authority shall contribute to the consistent application of this Regulation
     throughout the Union and cooperate with each other and with the Commission. 
 
-2. For the purpose laid down in paragraph 1 and without prejudice to article 19, 
-    the supervisory authorities designated in accordance with
-    Article 18(0) shall cooperate with each
-    other and the Commission in accordance with Chapter VII of Regulation (EU) 2016/ 679
-    regarding the matters covered by Chapter II of this Regulation.
 
 ## CHAPTER V
 
@@ -773,8 +756,10 @@ Article 21
 Remedies
 ```
 1. Without prejudice to any other administrative or judicial remedy, every end-user of
-    electronic communications services shall have the same remedies provided for in
-    Articles 77, 78, and 79 of Regulation (EU) 2016/679.
+    electronic communications services shall have the right to an effective judicial remedy in
+    relation to any infringement of his or her rights under this Regulation, the right to
+    lodge a complaint with a supervisory authority and the right to an effective judicial
+    remedy against any decision of a supervisory authority. 
 
 1a. End-users who are natural persons shall also have the right to representation
     provided for in Article 80 of Regulation (EU) 2016/679.
