--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -143,6 +143,9 @@ Definitions
     interactive communication merely as a minor ancillary feature that is intrinsically
     linked to another service.
  
+    For the purposes of this Regulation, the definition of 'processing' referred to in
+    Article 4(2) of Regulation 2016/679 shall not be limited to processing of personal data.
+
 3. In addition, for the purposes of this Regulation the following definitions shall apply:
 
 (a) ‘electronic communications data’ means electronic communications content and
@@ -448,7 +451,12 @@ Restrictions
     appropriate and proportionate measure in a democratic society to safeguard one or
     more of the general public interests referred to in Article 23(1)(c) to (e), (i) and (j) of
     Regulation (EU) 2016/679 or a monitoring, inspection or regulatory function
-    connected to the exercise of official authority for such interests.
+    connected to the exercise of official authority for such interests. 
+    To that end and under the same conditions, Union
+    or Member State law may, inter alia, impose an obligation on the providers of
+    electronic communication services to retain electronic communications data to
+    safeguard one or more of the general public interests referred to in this paragraph,
+    for a limited period of time longer than the one provided for in Article 7.
 
 1a. Article 23(2) of Regulation (EU) 2016/679 shall apply to any legislative measures
     referred to in paragraph 1.
@@ -605,7 +613,7 @@ Unsolicited and direct marketing communications
     persons unless they have given their consent.
 
 2. Notwithstanding paragraph 1, where a natural or legal person obtains contact details for electronic message
-    from end-users who are natural persons, in the context of the purchase of a product or a service, in accordance
+    from end-users who are natural persons, in the context of the sale of a product or a service, in accordance
     with Regulation (EU) 2016/679, that natural or legal person may use these 
     contact details for direct marketing of its own similar products or services only if
     such end-users are clearly and distinctly given the opportunity to object, free of charge
@@ -664,11 +672,16 @@ Unsolicited and direct marketing communications
 
 ```
 Article 18
-Independent supervisory authorities
+Supervisory authorities
 ```
-0. Each Member State shall provide for one or more independent public authorities to
+0. Each Member State shall provide for one or more public authorities to
     be responsible for monitoring the application of this Regulation (‘supervisory
-    authorities’).
+    authorities’). As far as a
+    processing of electronic communications data qualifying as personal data is
+    concerned, the supervisory authority responsible for monitoring the application of
+    Regulation (EU) 2016/679 shall be responsible for monitoring the application of this
+    Regulation. Chapters VI and VII of Regulation (EU) 2016/679 shall apply mutatis
+    mutandis
 
 1ab. The supervisory authorities referred to in paragraph 0 shall have
     investigative and corrective powers, including the power to impose administrative
@@ -678,8 +691,9 @@ Independent supervisory authorities
     application of this Regulation in a Member State, such authorities shall cooperate
     with each other. 
 
-2. The supervisory authorities referred to in paragraph 0 shall cooperate with the 
-    supervisory authority responsible for monitoring the application of Regulation (EU) 2016/679 and,
+2. Where the supervisory authorities referred to in paragraph 0 are not the 
+    supervisory authorities responsible for monitoring the application of Regulation 
+    (EU) 2016/679, they shall cooperate with the latter and,
     whenever appropriate with national regulatory authorities established pursuant to the
     Directive Establishing the European Electronic Communications Code and other relevant authorities.
 
@@ -692,6 +706,10 @@ European Data Protection Board
     Chapters I and II of this Regulation.
 
 2. The Board shall also have the following tasks:
+
+(aa) monitor and ensure the correct application of this Regulation in the cases provided
+    for in Articles 64 and 65 of Regulation (EU) 2016/679 without prejudice to the tasks
+    of national supervisory authorities;
 
 (a) advise the Commission on any proposed amendment of this Regulation;
 
