--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -64,9 +64,7 @@ Material Scope
     communications metadata.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
-    offices and agencies is governed by Regulation (EU) 00/0000 [new Regulation
-    replacing Regulation 45/2001].
-
+    offices and agencies is governed by Regulation (EU) 2018/1725
 
 4. This Regulation shall be without prejudice to the application of Directive
     2000/31/EC^9 , in particular of the liability rules of intermediary service providers in
@@ -186,6 +184,10 @@ Definitions
     instructions set for that system, and transmitting sounds which are not live speech,
     including calls made using automated calling and communication systems which
     connect the called person to an individual.
+
+(i) 'direct marketing calls' means direct marketing voice-to-voice calls and calls made
+    via automated calling and communication systems for the purpose of direct
+    marketing.
 
 ```
 Article 4a
@@ -674,14 +676,14 @@ Unsolicited and direct marketing communications
 Article 18
 Supervisory authorities
 ```
-0. Each Member State shall provide for one or more public authorities to
+0. Each Member State shall provide for one or more independent public authorities
+    meeting the requirements set out in Articles 51 to 54 of Regulation (EU) 2016/679 to
     be responsible for monitoring the application of this Regulation (‘supervisory
-    authorities’). As far as a
-    processing of electronic communications data qualifying as personal data is
-    concerned, the supervisory authority responsible for monitoring the application of
-    Regulation (EU) 2016/679 shall be responsible for monitoring the application of this
-    Regulation. Chapters VI and VII of Regulation (EU) 2016/679 shall apply mutatis
-    mutandis
+    authorities’).
+
+    Member States may entrust the monitoring of the application of Articles 12 to 16 to
+    the supervisory authority or authorities referred to in the previous subparagraph or
+    to another authority or authorities having the appropriate expertise.
 
 1ab. The supervisory authorities referred to in paragraph 0 shall have
     investigative and corrective powers, including the power to impose administrative
@@ -702,24 +704,17 @@ Article 19
 European Data Protection Board
 ```
 1. The European Data Protection Board, established under Article 68 of Regulation (EU)
-    2016/679, shall have competence to e contribute to the consistent application of
-    Chapters I and II of this Regulation.
+    2016/679, shall have the task to contribute to the consistent application of
+    Chapters I II and III of this Regulation.
 
 2. The Board shall also have the following tasks:
-
-(aa) monitor and ensure the correct application of this Regulation in the cases provided
-    for in Articles 64 and 65 of Regulation (EU) 2016/679 without prejudice to the tasks
-    of national supervisory authorities;
 
 (a) advise the Commission on any proposed amendment of this Regulation;
 
 (b) examine, on its own initiative, on request of one of its members or on request of the
     Commission, any question covering the application of this Regulation in relation to
-    Chapters I and II and issue guidelines, recommendations and best practices in order to encourage consistent
+    Chapters I II and III and issue guidelines, recommendations and best practices in order to encourage consistent
     application of this Regulation.
-
-(c) draw up guidelines for supervisory authorities referred to in paragraph 0 of Article
-    18 in relation to their powers;
 
 (d) issue guidelines, recommendations and best practices  in order to facilitate
     cooperation, including exchange of information, between supervisory authorities
@@ -742,17 +737,15 @@ European Data Protection Board
     equipment as laid down in Chapter II and practice relevant supervisory authorities
     world wide;
 
-(i) maintain a publicly accessible electronic register of decisions taken by supervisory
-    authorities referred to in paragraph 0 o fArticle 18 and courts on issues handled in
-    the consistency mechanism.
-
 3. Where the Commission requests advice from the Board, it may indicate a time limit,
     taking into account the urgency of the matter.
 
 4. The Board shall forward its opinions, guidelines, recommendations, and best
     practices to the Commission and make them public.
 
-5. The Board shall, where appropriate, consult interested parties and give them the
+5. The Board shall closely cooperate with the supervisory authorities referred to in
+    Article 18(0) for the purposes of the application of this Regulation. 
+    The Board shall, where appropriate, consult interested parties and give them the
     opportunity to comment within a reasonable period. The Board shall, without
     prejudice to Article 76 of Regulation (EU) 2016/679, make the result of the
     consultation procedures publicly available.
@@ -779,8 +772,7 @@ Remedies
     lodge a complaint with a supervisory authority and the right to an effective judicial
     remedy against any decision of a supervisory authority. 
 
-1a. End-users who are natural persons shall also have the right to representation
-    provided for in Article 80 of Regulation (EU) 2016/679.
+    Articles 77-80 of Regulation (EU) 2016/679 shall apply mutatis mutandis.
 
 2. Any natural or legal person other than end-users adversely affected by infringements
     of this Regulation, including a provider of electronic communications services
@@ -800,7 +792,7 @@ Article 82 of Regulation (EU) 2016/679.
 Article 23
 General conditions for imposing administrative fines
 ```
-1. For the purpose of this Article, Chapter VIII of Regulation (EU) 2016/679 shall apply
+1. Article 83 of Regulation (EU) 2016/679 shall apply mutatis mutandis
     to infringements of this Regulation.
 2. Infringements of the following provisions of this Regulation shall, in accordance
     with paragraph 1, be subject to administrative fines up to EUR 10 000 000, or in the
