--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -172,8 +172,9 @@ Definitions
     and techniques; 
 
 (f) ‘direct marketing communications’ means any form of advertising, whether written
-    or oral, sent to one or more identified or identifiable end-users of electronic
-    communications services, including the placing of voice-to-voice calls, the use of automated calling and communication
+    or oral, sent via a publicly available electronic communications service directly
+    to one or more specific end-users, including the placing of voice-to-voice calls,
+    the use of automated calling and communication
     systems with or without human interaction, electronic message, etc.;
 
 (g) ‘direct marketing voice-to-voice calls’ means live calls, which do not entail the use
@@ -513,8 +514,8 @@ Presentation and restriction of calling and connected line identification
 
 ```
 Article 13
-Exceptions to presentation and restriction of calling and connected line identification, to rejection
-of incoming calls and to provide access to emeregency services
+Exceptions to presentation and restriction of calling and connected line identification in relation
+to emergency communications
 ```
 1. Regardless of whether the calling end-user has prevented the presentation of the
     calling line identification, where emergency communications are made to emergency services, providers of
@@ -532,12 +533,6 @@ of incoming calls and to provide access to emeregency services
     emergency communications, including public safety answering points, for the purpose
     of responding to such communications.
 
-2. Member States shall establish more specific provisions with regard to the
-    establishment of procedures and the circumstances where providers of
-	number-based interpersonal communication services shall override, or otherwise address, the
-    elimination of the presentation of the calling line identification on a temporary basis,
-    where end-users request the tracing of unwanted, malicious or nuisance calls.
-
 3. Notwithstanding Article 8(1), regardless of whether the end-user has prevented access to the terminal equipment’s
     Global Navigation Satellite Systems (GNSS) capabilities or other types of
     terminal equipment based location data through the terminal
@@ -552,6 +547,13 @@ Incoming call blocking
 ```
 1. Providers of number-based interpersonal communications services shall
     deploy state of the art measures to limit the reception of unwanted, malicious or nuisance calls by end-users.
+
+1a. Member States shall establish more specific provisions with regard to the
+    establishment of transparent procedures and the circumstances where providers of
+    number-based interpersonal communication services shall override, or otherwise
+    address, the elimination of the presentation of the calling line identification on a
+    temporary basis, where end-users request the tracing of unwanted, malicious or
+    nuisance calls. 
 
 2. Providers of number-based interpersonal communications services shall
     also provide the called end-user with the following possibilities, free of charge:
